# Cpp_ITMO

Task_1/: CMakeLists.txt  main.cpp  procedures.cpp  procedures.h
Task_2/: CMakeLists.txt  main.cpp  menu.cpp  menu.h  string_analyser.cpp  string_analyzer.h
Task_3/: CMakeLists.txt  main.cpp
Task_3/queue/: queue.cpp  queue.h
Task_3/triangle/: triangle.cpp  triangle.h  vector.cpp  vector.h
Task_4/: CMakeLists.txt  main.cpp
Task_4/figures/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h
Task_4/figures/abstract/: Figure.h  PhysObject.cpp  PhysObject.h  Vector2D.cpp  Vector2D.h
Task_4/figures/abstract/interfases/: BaseCObject.h  CVector2D.h  IDialogInitiable.h  IGeoFig.h  IPhysObject.h  IPrintable.h
Task_4/util/: system.cpp  system.h
Task_5/: main.cpp
Task_5/exceptions/: simpleException.h
Task_5/templates/: queue.h  vectorMaximum.h
Task_5/types/: cat.cpp  cat.h
Task_6/: algorithms.h  cat.h  main.cpp
Task_6/types/: cat.cpp  cat.h
Task_7/: CircularBuffer.h  iterator.h  main.cpp
Task_8/: CMakeLists.txt  main.cpp
Task_8/entities/: Brink.cpp  Brink.h  Chunk.cpp  Chunk.h  CubeRubi.cpp  CubeRubi.h
Task_8/solveUtil/: Automaton.cpp  Automaton.h  Solver.h
